packages/compiler/__tests__/Components/__snapshots__/ast.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenize Function call with more { 1`] = `
"
abc(1,2,3) {{}
             ^ L0:14
             SyntaxError: Expected }"
`;

exports[`tokenize Function call without ending ) 1`] = `
"
abc(1x,1,2,3
   ^ L0:4
   SyntaxError: Expected )"
`;

exports[`tokenize Function call without ending block } 1`] = `
"
abc(1,2,3) {
           ^ L0:12
           SyntaxError: Unprocessed keyword"
`;

exports[`tokenize Unprocessed keyword 1`] = `
"
{
^ L0:1
SyntaxError: Unprocessed keyword"
`;

exports[`tokenize Unprocessed word keyword 1`] = `
"
hello
^ L0:1
SyntaxError: Unprocessed keyword"
`;

exports[`tokenize empty token list 1`] = `Array []`;

exports[`tokenize should parse functions 1`] = `
Array [
  AST {
    "source": Object {
      "col": 0,
      "line": 0,
    },
    "tokenOptions": Object {
      "block": Array [],
      "functionName": "abc",
      "parameters": Array [],
    },
    "type": "FUNCTION_CALL",
  },
]
`;

exports[`tokenize should parse functions with block 1`] = `
Array [
  AST {
    "source": Object {
      "col": 0,
      "line": 0,
    },
    "tokenOptions": Object {
      "block": Array [],
      "functionName": "abc",
      "parameters": Array [],
    },
    "type": "FUNCTION_CALL",
  },
]
`;

exports[`tokenize should parse functions with parameter 1`] = `
Array [
  AST {
    "source": Object {
      "col": 0,
      "line": 0,
    },
    "tokenOptions": Object {
      "block": Array [],
      "functionName": "abc",
      "parameters": Array [
        Object {
          "source": Object {
            "col": 4,
            "line": 0,
          },
          "value": "1",
        },
      ],
    },
    "type": "FUNCTION_CALL",
  },
]
`;

exports[`tokenize should parse functions with parameter and block 1`] = `
Array [
  AST {
    "source": Object {
      "col": 0,
      "line": 0,
    },
    "tokenOptions": Object {
      "block": Array [],
      "functionName": "abc",
      "parameters": Array [
        Object {
          "source": Object {
            "col": 4,
            "line": 0,
          },
          "value": "1",
        },
      ],
    },
    "type": "FUNCTION_CALL",
  },
]
`;

exports[`tokenize should parse functions with parameters 1`] = `
Array [
  AST {
    "source": Object {
      "col": 0,
      "line": 0,
    },
    "tokenOptions": Object {
      "block": Array [],
      "functionName": "abc",
      "parameters": Array [
        Object {
          "source": Object {
            "col": 4,
            "line": 0,
          },
          "value": "1x",
        },
        Object {
          "source": Object {
            "col": 6,
            "line": 0,
          },
          "value": ",",
        },
        Object {
          "source": Object {
            "col": 7,
            "line": 0,
          },
          "value": "1",
        },
        Object {
          "source": Object {
            "col": 8,
            "line": 0,
          },
          "value": ",",
        },
        Object {
          "source": Object {
            "col": 9,
            "line": 0,
          },
          "value": "2",
        },
        Object {
          "source": Object {
            "col": 10,
            "line": 0,
          },
          "value": ",",
        },
        Object {
          "source": Object {
            "col": 11,
            "line": 0,
          },
          "value": "3",
        },
      ],
    },
    "type": "FUNCTION_CALL",
  },
]
`;

exports[`tokenize should parse functions with parameters and block 1`] = `
Array [
  AST {
    "source": Object {
      "col": 0,
      "line": 0,
    },
    "tokenOptions": Object {
      "block": Array [
        AST {
          "source": Object {
            "col": 2,
            "line": 1,
          },
          "tokenOptions": Object {
            "block": Array [],
            "functionName": "abc",
            "parameters": Array [],
          },
          "type": "FUNCTION_CALL",
        },
      ],
      "functionName": "abc",
      "parameters": Array [
        Object {
          "source": Object {
            "col": 4,
            "line": 0,
          },
          "value": "1x",
        },
        Object {
          "source": Object {
            "col": 6,
            "line": 0,
          },
          "value": ",",
        },
        Object {
          "source": Object {
            "col": 7,
            "line": 0,
          },
          "value": "1",
        },
        Object {
          "source": Object {
            "col": 8,
            "line": 0,
          },
          "value": ",",
        },
        Object {
          "source": Object {
            "col": 9,
            "line": 0,
          },
          "value": "2",
        },
        Object {
          "source": Object {
            "col": 10,
            "line": 0,
          },
          "value": ",",
        },
        Object {
          "source": Object {
            "col": 11,
            "line": 0,
          },
          "value": "3",
        },
      ],
    },
    "type": "FUNCTION_CALL",
  },
]
`;

exports[`tokenize should parse functions with parameters and nested blocks 1`] = `
Array [
  AST {
    "source": Object {
      "col": 0,
      "line": 0,
    },
    "tokenOptions": Object {
      "block": Array [
        AST {
          "source": Object {
            "col": 7,
            "line": 1,
          },
          "tokenOptions": Object {
            "block": Array [
              AST {
                "source": Object {
                  "col": 9,
                  "line": 2,
                },
                "tokenOptions": Object {
                  "block": Array [
                    AST {
                      "source": Object {
                        "col": 11,
                        "line": 3,
                      },
                      "tokenOptions": Object {
                        "block": Array [],
                        "functionName": "abc",
                        "parameters": Array [],
                      },
                      "type": "FUNCTION_CALL",
                    },
                  ],
                  "functionName": "def",
                  "parameters": Array [
                    Object {
                      "source": Object {
                        "col": 13,
                        "line": 2,
                      },
                      "value": "1",
                    },
                    Object {
                      "source": Object {
                        "col": 14,
                        "line": 2,
                      },
                      "value": ",",
                    },
                    Object {
                      "source": Object {
                        "col": 15,
                        "line": 2,
                      },
                      "value": "2",
                    },
                  ],
                },
                "type": "FUNCTION_CALL",
              },
            ],
            "functionName": "abc",
            "parameters": Array [],
          },
          "type": "FUNCTION_CALL",
        },
      ],
      "functionName": "abc",
      "parameters": Array [
        Object {
          "source": Object {
            "col": 4,
            "line": 0,
          },
          "value": "1x",
        },
        Object {
          "source": Object {
            "col": 6,
            "line": 0,
          },
          "value": ",",
        },
        Object {
          "source": Object {
            "col": 7,
            "line": 0,
          },
          "value": "1",
        },
        Object {
          "source": Object {
            "col": 8,
            "line": 0,
          },
          "value": ",",
        },
        Object {
          "source": Object {
            "col": 9,
            "line": 0,
          },
          "value": "2",
        },
        Object {
          "source": Object {
            "col": 10,
            "line": 0,
          },
          "value": ",",
        },
        Object {
          "source": Object {
            "col": 11,
            "line": 0,
          },
          "value": "3",
        },
      ],
    },
    "type": "FUNCTION_CALL",
  },
]
`;

exports[`tokenize tokenize two variables 1`] = `
Array [
  AST {
    "source": Object {
      "col": 0,
      "line": 0,
    },
    "tokenOptions": Object {
      "type": "abc",
      "value": "0",
      "variableName": "i",
    },
    "type": "DECLARATION",
  },
  AST {
    "source": Object {
      "col": 0,
      "line": 1,
    },
    "tokenOptions": Object {
      "type": "int",
      "value": "1",
      "variableName": "j",
    },
    "type": "DECLARATION",
  },
]
`;
